# cpplib

./: CMakeLists.txt
.github/workflows/: ci.yml
cmake/: cpplibConfig.cmake.in
include/: CMakeLists.txt
include/cpplib/: math.h
src/: CMakeLists.txt  math.cpp
src/cpp_lib/: cmath.h  string.h
src/cpplib/: cmath.h  string.h
tests/: CMakeLists.txt  cmath_tests.cpp  math_tests.cpp  string_tests.cpp
